// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest vs output: 00 - manifest 1`] = `
Object {
  "browser_action": Object {
    "default_icon": Object {
      "16": "images/icon-main-16.png",
    },
    "default_popup": "popup/popup.html",
  },
  "description": "html-only chrome extension",
  "devtools_page": "devtools/devtools.html",
  "manifest_version": 2,
  "name": "html-only",
  "permissions": Array [],
  "version": "0.1.0",
}
`;

exports[`manifest vs output: 01 - files from manifest 1`] = `
Object {
  "CSS": Array [],
  "HTML": Array [
    "devtools/devtools.html",
    "popup/popup.html",
  ],
  "IMAGE": Array [
    "images/icon-main-16.png",
  ],
  "JSON": Array [],
  "SCRIPT_BACKGROUND": Array [],
  "SCRIPT_DECLARED": Array [],
}
`;

exports[`manifest vs output: 02 - files from output 1`] = `
Array [
  "devtools/devtools.html",
  "images/icon-main-16.png",
  "manifest.json",
  "popup/popup.html",
]
`;

exports[`manifest vs output: 03 - manifest files match output 1`] = `
Object {
  "devtools/devtools.html": true,
  "images/icon-main-16.png": true,
  "popup/popup.html": true,
}
`;

exports[`manifest vs output: devtools/devtools.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
	<meta charset=\\"UTF-8\\">
	<title>Title</title>
</head>
<body>



</body></html>"
`;

exports[`manifest vs output: popup/popup.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>Popup</title>
  </head>
  <body>
    <h1>Popup</h1>
  

</body></html>"
`;
